# casa-squire-win

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  template.env
src/: app.py  service.py
src/handlers/: __init__.py  base.py  shutdown.py
src/settings/: __init__.py  app_settings.py  mqtt_settings.py
src/utils/: logs.py  mqtt_client.py
tests/: test_shutdown.py
